# pywebviewBet365app

./: .gitignore  README.md  activeHoles.json  bet365golfnotifyme.spec  bulma-template.html  course.json  distanceConverter.py  globals.json  group.json  groupComments.py  groupLboard.json  holes copy.json  holes.json  homeFunction.py  main.py  main.txt  notifications.json  notifyfront.py  orderlbord.json  penalty.json  pyproject.toml  script.js  settings.py  setup.py  styles.css  tabs.html  time.py  ws_helpers.py
assets/data/: .fuse_hidden0000026600000001  .fuse_hidden0000368300000002  .fuse_hidden00004e7300000001  .fuse_hidden0000714400000002  .fuse_hidden0000757400000003  .fuse_hidden00008fe8000025d2  .fuse_hidden0000a11900000001  .fuse_hidden0006bf4200000cb9  .fuse_hidden0006ca8e00001022  .fuse_hidden0006f53300001025  v353Golfdata.json
assets/html/: about.html  index.html  players.html  tournaments.html
assets/html/css/: custom.css
assets/html/js/: pyviewsctipt.js
