[tool.poetry]
name = "Bet365NotifyMe"
version = "0.1.0"
description = "Bet365GolfApp Shots notifications"
authors = ["David Migoya <dmigoya@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pywebview = {extras = ["qt"], version = "^3.5"}
websocket-client = "^1.2.1"
tinydb = "^4.5.1"
pyinstaller = "^4.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
